data/forge_javadoc/1.7.10/raw/net/minecraft/network/play/server/S3EPacketTeams.md
---
title: "S3EPacketTeams"
description: "public class S3EPacketTeams extends Packet"
package: "net/minecraft/network/play/server"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/network/play/server/S3EPacketTeams.html"
sourceType: javadoc
---

# S3EPacketTeams

**Inheritance:** java.lang.Object → net.minecraft.network.Packet → net.minecraft.network.play.server.S3EPacketTeams

## Class signature

```java
public class S3EPacketTeams extends Packet
```

## Constructors

- `S3EPacketTeams()`
- `S3EPacketTeams(ScorePlayerTeam p_i45226_1_, java.util.Collection p_i45226_2_, int p_i45226_3_)`
- `S3EPacketTeams(ScorePlayerTeam p_i45225_1_, int p_i45225_2_)`

## Methods

- `java.lang.String func_149306_d()`
- `int func_149307_h()`
- `int func_149308_i()`
- `java.lang.String func_149309_f()`
- `java.util.Collection func_149310_g()`
- `java.lang.String func_149311_e()`
- `java.lang.String func_149312_c()`
- `void processPacket(INetHandler p_148833_1_)`
- `void processPacket(INetHandlerPlayClient p_148833_1_)`
- `void readPacketData(PacketBuffer p_148837_1_)`
- `void writePacketData(PacketBuffer p_148840_1_)`
