data/forge_javadoc/1.8.9/raw/net/minecraft/network/play/server/S3EPacketTeams.md
---
title: "S3EPacketTeams"
description: "public class S3EPacketTeams extends java.lang.Object implements Packet<INetHandlerPlayClient>"
package: "net/minecraft/network/play/server"
version: "1.8.9"
forgeBuild: "11.15.1.2318"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.8.9-11.15.1.2318/net/minecraft/network/play/server/S3EPacketTeams.html"
sourceType: javadoc
---

# S3EPacketTeams

**Inheritance:** java.lang.Object → net.minecraft.network.play.server.S3EPacketTeams

## Class signature

```java
public class S3EPacketTeams extends java.lang.Object implements Packet<INetHandlerPlayClient>
```

## Constructors

- `S3EPacketTeams()`
- `S3EPacketTeams(ScorePlayerTeam p_i45226_1_, java.util.Collection<java.lang.String> p_i45226_2_, int p_i45226_3_)`
- `S3EPacketTeams(ScorePlayerTeam p_i45225_1_, int p_i45225_2_)`

## Methods

- `java.lang.String func_149306_d()`
- `int func_149307_h()`
- `int func_149308_i()`
- `java.lang.String func_149309_f()`
- `java.util.Collection<java.lang.String> func_149310_g()`
- `java.lang.String func_149311_e()`
- `java.lang.String func_149312_c()`
- `int func_179813_h()`
- `java.lang.String func_179814_i()`
- `void processPacket(INetHandlerPlayClient handler)` — Passes this Packet on to the NetHandler for processing.
- `void readPacketData(PacketBuffer buf)` — Reads the raw packet data from the data stream.
- `void writePacketData(PacketBuffer buf)` — Writes the raw packet data to the data stream.
